src/test/resources/org/nest/nestml/_cocos/valid/neuronWithMultipleOrNoOutput.nestml
neuron neuronWithMultipleOutputs:

  output: current

end