src/test/resources/org/nest/nestml/_cocos/invalid/neuronWithMultipleOrNoOutput.nestml
neuron neuronWithNoOutput:

end

neuron neuronWithMultipleOutputs:
  output: spike

  output: current

end